objects/Market__c.object
<CustomObject>
    <description>Object used by Channel GIBU to group accounts, opportunities, contacts, and user sales teams into logical groupings. One Region can have many Markets can have many accounts, opportunities, contacts, and users on the sales team.</description>
    <fields>
        <fullName>GIBU__c</fullName>
        <label>GIBU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Channel</fullName>
                </value>
                <value>
                    <fullName>Solar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricebook_Id__c</fullName>
        <description>Salesforce Id of pricebook associated with this market</description>
        <inlineHelpText>Should be automatically created and populated by a trigger</inlineHelpText>
        <label>Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>East Region</fullName>
                </value>
                <value>
                    <fullName>Central Region</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>West Region</fullName>
                </value>
                <value>
                    <fullName>Undetermined</fullName>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Market</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Central_Region</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Central Region</value>
        </filters>
        <label>Central Region</label>
        <sharedTo>
            <group>ChannelUsers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>East_Region</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>East Region</value>
        </filters>
        <label>East Region</label>
        <sharedTo>
            <group>ChannelUsers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Latin_America</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Mexico,Latin America</value>
        </filters>
        <label>Latin America</label>
        <sharedTo>
            <group>ChannelUsers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Markets</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Markets</label>
    </listViews>
    <listViews>
        <fullName>West_Region</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>West Region</value>
        </filters>
        <label>West Region</label>
        <sharedTo>
            <group>ChannelUsers</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Market Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Markets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>